--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
         <module>zuul</module>
         <module>hystrix-dashboard</module>
         <module>turbine</module>
+        <module>springcloud-config</module>
+        <module>springcloud-config</module>
+        <module>config-center</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
