--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,24 +1,24 @@
-spring:
-  application:
-    name: user-service
-
-# item      8001
-# user      8101
-# order     8201
-server:
-  port: 8101
-
-# 自定义配置属性
-# demo 数据
-# [{id:7,username:xxx,password:xxx}, {8}, {9}]
-sp:
-  user-service:
-    users: "[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},
-             {\"id\":8, \"username\":\"def\",\"password\":\"456\"},
-             {\"id\":9, \"username\":\"ghi\",\"password\":\"789\"}]"
-
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
+#spring:
+#  application:
+#    name: user-service
+#
+## item      8001
+## user      8101
+## order     8201
+#server:
+#  port: 8101
+#
+## 自定义配置属性
+## demo 数据
+## [{id:7,username:xxx,password:xxx}, {8}, {9}]
+#sp:
+#  user-service:
+#    users: "[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},
+#             {\"id\":8, \"username\":\"def\",\"password\":\"456\"},
+#             {\"id\":9, \"username\":\"ghi\",\"password\":\"789\"}]"
+#
+#
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
