--- a/order-service/src/main/resources/bootstrap.yml
+++ b/order-service/src/main/resources/bootstrap.yml
@@ -1,18 +1,15 @@
-# bootstrap.yml
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
-
-
-# 连接注册中心到config-service连接配置中心,找到名为order-service,profile为dev的文佳
-spring:
-  cloud:
-    config:
-      discovery:
-        enabled: true   # 从注册表发现配置中心的地址
-        service-id: config-server
-      name: order-service
-      profile: dev
-
+## bootstrap.yml
+#
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
+#spring:
+#  cloud:
+#    config:
+#      discovery:
+#        enabled: true   # 从注册表发现配置中心的地址
+#        service-id: config-server
+#      name: order-service
+#      profile: dev
+#
