--- a/item-service/src/main/resources/bootstrap.yml
+++ b/item-service/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ eureka:
       defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
 
 
-# 连接注册中心到config-service连接配置中心,找到名为item-service,profile为dev的文佳
+# 连接注册中心到config-server连接配置中心,找到名为item-service,profile为dev的文佳
 spring:
   cloud:
     config:
