--- a/config/user-service-dev.yml
+++ b/config/user-service-dev.yml
@@ -36,7 +36,7 @@ sp:
              {\"id\":5, \"username\":\"555\",\"password\":\"555\"},
              {\"id\":6, \"username\":\"666\",\"password\":\"666\"},
              {\"id\":888, \"username\":\"000\",\"password\":\"111\"},
-             {\"id\":100, \"username\":\"roy\",\"password\":\"roy\"},
+             {\"id\":9999998, \"username\":\"roy\",\"password\":\"roy\"},
              {\"id\":9, \"username\":\"ghi\",\"password\":\"789\"}]"
 
 
