--- a/turbine/src/main/resources/application.yml
+++ b/turbine/src/main/resources/application.yml
@@ -9,7 +9,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
+      defaultZone: http://eureka1:2001/eureka
 
 #从指定服务名聚合，再给聚合的取个名
 turbine:
