--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
+      defaultZone: http://eureka1:2001/eureka
 spring:
   cloud:
     config:
@@ -12,4 +12,5 @@ spring:
         service-id: config-server
       name: user-service
       profile: dev
+
 
